# third_lib_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Findheader_only_third_lib.cmake  Findthird_lib.cmake
example/usage/: CMakeLists.txt  main.cpp
example/usage/include/: usage.hpp
example/usage/src/: usage.cpp
include/: third_lib.hpp
src/: third_lib.cpp
test/: CMakeLists.txt  main.hpp  test.hpp
